# app/controller/log.go
@@ -5,6 +5,7 @@ import (
 	"fmt"
 	"remembrance/app/common"
 	"remembrance/app/common/email"
+	"remembrance/app/common/tube"
 	"remembrance/app/models"
 	"remembrance/app/response"
 
@@ -14,16 +15,16 @@ import (
 
 //var mes email.Message
 
-// @Summary		登录
-// @Description	获取email password 并检查是否匹配， 匹配成功后会将成功消息与 userid 传回前端 userid 在之后会用到
-// @Tags			login
-// @Accept			application/json
-// @Produce		application/json
-// @Param			email		body		models.S_User				false	"email"
-// @Param			password	body		models.S_User				false	"password"
-// @Success		200			{object}	response.OkMesData		`{"message":"登录成功"}`
-// @Failure		400			{object}	response.FailMesData	`{"message":"Failure"}`
-// @Router			/api/login [post]
+//	@Summary		登录
+//	@Description	获取email password 并检查是否匹配， 匹配成功后会将成功消息与 userid,token(HMAC SHA256 算法创建,密钥为"remembrance") 传回前端, userid需要解析才能获得， 在之后会用到
+//	@Tags			login
+//	@Accept			application/json
+//	@Produce		application/json
+//	@Param			email		body		models.S_User	false	"email"
+//	@Param			password	body		models.S_User	false	"password"
+//	@Success		200			{object}	okmesdata		`{"code": 200,"message": "登录成功"}`
+//	@Failure		400			{object}	failmesdata		`{"code":400,"message":"Failure"}`
+//	@Router			/api/login [post]
 func Login(c *gin.Context) {
 	var loguser, user models.User
 	// 使用 ShouldBindJSON 解析请求中的 JSON 数据并将其绑定到 user 结构体
@@ -37,34 +38,45 @@ func Login(c *gin.Context) {
 		if errors.Is(err, gorm.ErrRecordNotFound) {
 			// 没有找到匹配的记录
 			response.FailMsg(c, "该用户不存在")
+			return
 		} else {
 			// 其他查询错误
 			response.FailMsg(c, "other")
 			//fmt.Printf("查询错误: %s\n", err.Error())
 			//fmt.Println(user)
+			return
 		}
+	}
+	//获取token
+	token, err := tube.CreateToken(user.ID)
+	if err != nil {
+		response.FailMsg(c, "生成 token 失败")
+		return
 	}
 
 	if user.Password == loguser.Password {
 		//密码正确
-		response.OkData(c, user.ID)
+		c.Header("Authorization", token)
+		response.OkMsg(c, "登录成功")
+		return
 	} else {
 		//密码错误
-		response.Fail(c)
+		response.FailMsg(c, "密码错误")
+		return
 	}
 
 }
 
-// @Summary		获取验证码
-// @Description	根据情况向指定邮箱发送不同时限的验证码，
-// @Tags			login
-// @Accept			application/json
-// @Produce		application/json
-// @Param			email	body		email.Message			false	"email"
-// @Param			gettype	body		email.Message			false	"请求类型:注册'register',改密码'change'"
-// @Success		200		{object}	response.OkMesData		"{"message":"获取成功"}"
-// @Failure		400		{object}	response.FailMesData	"{"message":"Failure"}"
-// @Router			/api/get_code [get]
+//	@Summary		获取验证码
+//	@Description	根据情况向指定邮箱发送不同时限的验证码，
+//	@Tags			login
+//	@Accept			application/json
+//	@Produce		application/json
+//	@Param			email	body		email.Message	false	"email"
+//	@Param			gettype	body		email.Message	false	"请求类型:注册'register',改密码'change'"
+//	@Success		200		{object}	okmesdata		"{"message":"获取成功"}"
+//	@Failure		400		{object}	failmesdata		"{"message":"Failure"}"
+//	@Router			/api/get_code [get]
 func Get_code(c *gin.Context) {
 	var mes email.Message
 	//需要 用户邮箱 验证码用途（改密码，注册）
@@ -122,17 +134,17 @@ func Get_code(c *gin.Context) {
 
 }
 
-// @Summary		检查验证码
-// @Description	根据发送的 邮箱 请求方式（register，change）检查 验证码， 会返回 "验证码不存在或已过期"/"验证码正确"/"验证码错误"
-// @Tags			login
-// @Accept			application/json
-// @Produce		application/json
-// @Param			email	body		email.Message			true	"email"
-// @Param			code	body		email.Message			true	"code"
-// @Param			gettype	body		email.Message			true	"请求类型:注册'register',改密码'change'"
-// @Success		200		{object}	response.OkMesData		"{"message":"成功"}"
-// @Failure		400		{object}	response.FailMesData	"{"message":"Failure"}"
-// @Router			/api/check_code [post]
+//	@Summary		检查验证码
+//	@Description	根据发送的 邮箱 请求方式（register，change）检查 验证码， 会返回 "验证码不存在或已过期"/"验证码正确"/"验证码错误"
+//	@Tags			login
+//	@Accept			application/json
+//	@Produce		application/json
+//	@Param			email	body		email.Message	true	"email"
+//	@Param			code	body		email.Message	true	"code"
+//	@Param			gettype	body		email.Message	true	"请求类型:注册'register',改密码'change'"
+//	@Success		200		{object}	okmesdata		"{"message":"成功"}"
+//	@Failure		400		{object}	failmesdata		"{"message":"Failure"}"
+//	@Router			/api/check_code [post]
 func Check_Code(c *gin.Context) {
 	//需要 用户邮箱 验证码 验证码用途（改密码，注册）
 	var usermes email.Message
@@ -147,17 +159,17 @@ func Check_Code(c *gin.Context) {
 
 }
 
-// @Summary		注册
-// @Description	前端检查验证码正确之后，再将 email 与 password 传给后端
-// @Produce		json
-// @Tags			login
-// @Accept			application/json
-// @Produce		application/json
-// @Param			email		body		models.S_User				true	"email"
-// @Param			password	body		models.S_User				true	"password"
-// @Success		200			{object}	response.OkMesData		`{"message":"注册成功"}`
-// @Failure		400			{object}	response.FailMesData	"{"message":"Failure"}"
-// @Router			/api/register [put]
+//	@Summary		注册
+//	@Description	前端检查验证码正确之后，再将 email 与 password 传给后端
+//	@Produce		json
+//	@Tags			login
+//	@Accept			application/json
+//	@Produce		application/json
+//	@Param			email		body		models.S_User	true	"email"
+//	@Param			password	body		models.S_User	true	"password"
+//	@Success		200			{object}	okmesdata		`{"message":"注册成功"}`
+//	@Failure		400			{object}	failmesdata		"{"message":"Failure"}"
+//	@Router			/api/register [put]
 func Register(c *gin.Context) {
 	//获取信息
 	var user models.User
@@ -175,4 +187,16 @@ func Register(c *gin.Context) {
 	}
 	common.DB.Create(&album)
 	response.OkMsg(c, "注册成功")
+}
+
+type okmesdata struct {
+	code    int    `json:"code"`
+	message string `json:"message"`
+	data    any    `json:"data"`
+}
+
+type failmesdata struct {
+	code    int    `json:"code"`
+	message string `json:"message"`
+	data    any    `json:"data"`
 }
